rgbds-0.6.1/test/asm/macro-syntax.simple.err
error: macro-syntax.asm(13):
    syntax error
error: macro-syntax.asm(15):
    syntax error
error: Assembly aborted (2 errors)!
